--- a/scss/layout/_features.scss
+++ b/scss/layout/_features.scss
@@ -1,44 +1,98 @@
 .features {
-    padding-top: 94px;
-    padding-bottom: 94px;
+    padding-top: 60px;
+    padding-bottom: 60px;
+
+    @media screen and (min-width: 1200px) {
+      padding-top: 94px;
+      padding-bottom: 94px;
+    }
+    
 }
 
 .features__list {
-    display: flex;
-    flex-direction: row;
-    gap: 30px;
+    display: block;
+
+    @media screen and (min-width: 768px) and (max-width:1199px) {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 30px;
+     }
+    
+
+    @media screen and (min-width: 1200px) {
+     display: flex;
+     flex-direction: row;
+     gap: 30px;
+    }
+    
 }
 
 .features__item {
-    flex-basis: calc((100% - 90px) / 4);
+
+    margin-bottom: 30px;
+
+    @media screen and (min-width: 768px) {
+        width: 354px;
+         flex-basis: calc((100% - 30px) / 2);
+        
+    }
+    @media screen and (min-width: 1200px) {
+         flex-basis: calc((100% - 90px) / 4);
+    }
+
+   &:last-child{
+    margin-bottom: 0;
+   }
 }
 
 .features__icons {
+
+    background-color: var(--filter-button);
+   
+    margin-bottom: 30px;
+    text-align: center;
+    box-sizing: inherit;
+    height: 120px;
+
+    @media screen and (min-width: 768px) {
+        display: flex;
+         width: 354px;
+         height: 120px;
+         align-items: center;
+         justify-content: center;
+    }
+
+    @media screen and (min-width: 1200px) {
     display: flex;
     width: 270px;
     height: 120px;
-    background-color: var(--filter-button);
-
     align-items: center;
     justify-content: center;
-    margin-bottom: 30px;
+     }
+
+         &--pic {
+             margin-top: 25px;
+         }
 }
 
-.features__titie {
-    margin-bottom: 10px;
 
+
+.features__titie {
     font-weight: 700;
     font-size: 14px;
     line-height: 1.17;
     letter-spacing: 0.03em;
     text-transform: uppercase;
+    text-align: center;
+    
+    margin-bottom: 10px;
 }
 
 .features__txt {
-    color: var(--text-color);
-
     font-weight: 400;
     font-size: 14px;
     line-height: 1.71;
     letter-spacing: 0.03em;
+    
+    color: var(--text-color);
 }
