--- a/scss/layout/_team.scss
+++ b/scss/layout/_team.scss
@@ -1,28 +1,48 @@
 .team {
-    padding-top: 94px;
-    padding-bottom: 94px;
+    padding-top: 60px;
+    padding-bottom: 60px;
 
     background-color: #f5f4fa;
+   
+    @media screen and (min-width: 1200px) {
+      padding-top: 94px;
+      padding-bottom: 94px;
+    }
 }
 
 .team-title {
-    margin-bottom: 50px;
-}
+    margin-bottom: 30px;
 
+    @media screen and (min-width: 1200px) {
+         margin-bottom: 50px;
+     }
+    }
+    
 .team-list {
+
+
     display: flex;
     flex-wrap: wrap;
     gap: 30px;
 }
 
 .team-item {
-    flex-basis: calc((100% - 90px) / 4);
-
+    width: 450px;
     background-color: var(--logo-footer-color);
 
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
         0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 0px 0px 4px 4px;
+
+    @media screen and (min-width: 768px) {
+        flex-basis: calc((100% - 30px) / 2);
+    }
+
+    @media screen and (min-width: 1200px) {
+         flex-basis: calc((100% - 90px) / 4);
+    }
+    
+   
 }
 
 .card-name {
