--- a/scss/components/_contacts.scss
+++ b/scss/components/_contacts.scss
@@ -21,6 +21,11 @@
 
     transition: color var(--animation);
 
+    @media screen and (max-width: 768px) {
+        display: none;
+        
+    }
+
     &--mail:hover,
     &--tel:hover,
     &--mail:focus,
