--- a/css/main.css
+++ b/css/main.css
@@ -50,7 +50,8 @@
 .adds__list,
 .connect__list,
 .filters,
-.portfolio__list {
+.portfolio__list,
+.mob-nav, .mob-contacts, .mob-socials {
   list-style-type: none;
 }
 
@@ -86,7 +87,9 @@ img {
 
 .hero__btn,
 .filters__btn,
-.send-btn {
+.send-btn,
+.menu-btn,
+.mob-menu__btn {
   cursor: pointer;
 }
 
@@ -137,6 +140,11 @@ img {
   text-decoration: none;
   -webkit-transition: color var(--animation);
   transition: color var(--animation);
+}
+@media screen and (max-width: 768px) {
+  .contacts__link {
+    display: none;
+  }
 }
 .contacts__link--mail:hover, .contacts__link--tel:hover, .contacts__link--mail:focus, .contacts__link--tel:focus {
   color: var(--akcent-color);
@@ -384,6 +392,145 @@ img {
           box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
+.menu-btn {
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  width: 40px;
+  height: 40px;
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+}
+@media screen and (min-width: 768px) {
+  .menu-btn {
+    display: none;
+  }
+}
+.menu-btn:hover, .menu-btn:focus {
+  fill: var(--akcent-color);
+}
+
+.mob-menu {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 100;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  width: 100%;
+  height: 796px;
+  background-color: white;
+  padding: 48px 83px 48px 40px;
+  -webkit-transform: translateX(100%);
+          transform: translateX(100%);
+  -webkit-transition: -webkit-transform var(--animation);
+  transition: -webkit-transform var(--animation);
+  transition: transform var(--animation);
+  transition: transform var(--animation), -webkit-transform var(--animation);
+}
+@media screen and (min-width: 768px) {
+  .mob-menu {
+    display: none;
+  }
+}
+.mob-menu .mob-menu.is-open {
+  -webkit-transform: translateX(0);
+          transform: translateX(0);
+}
+
+.mob-nav {
+  margin-bottom: auto;
+  padding: 0;
+}
+
+.mob-nav__item:not(:last-child) {
+  margin-bottom: 32px;
+}
+
+.mob-nav__link {
+  font-weight: 500;
+  font-size: 40px;
+  line-height: 1.18;
+  text-align: center;
+  letter-spacing: 0.02em;
+  color: var(--title-text-color);
+  text-decoration: none;
+}
+.mob-nav__link:hover, .mob-nav__link:focus {
+  color: var(--akcent-color);
+}
+
+.mob-contacts {
+  margin: 0;
+  padding: 0;
+}
+
+.mob-contacts__item:first-child {
+  margin-bottom: 32px;
+}
+
+.mob-contacts__item:last-child {
+  margin-bottom: 64px;
+}
+
+.mob-contacts__link--tel {
+  font-weight: 500;
+  font-size: 34px;
+  line-height: 1.18;
+  letter-spacing: 0.02em;
+  text-decoration: none;
+  color: var(--akcent-color);
+  margin-bottom: 32px;
+}
+
+.mob-contacts__link--mail {
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 28px;
+  letter-spacing: 0.02em;
+  text-decoration: none;
+  color: var(--text-color);
+}
+
+.mob-socials {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  gap: 10px;
+  margin-bottom: 0;
+  padding-left: 0;
+}
+
+.mob-socials__item:not(:last-child) .mob-socials__link {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  padding-right: 10px;
+  border-right: 1px solid rgba(33, 33, 33, 0.2);
+}
+
+.mob-socials__link {
+  font-size: 18px;
+  line-height: 1.22;
+  letter-spacing: 0.02em;
+  text-decoration: none;
+  color: var(--akcent-color);
+}
+
 .header {
   border-bottom: 1px solid #ececec;
 }
@@ -419,6 +566,11 @@ img {
   display: -ms-flexbox;
   display: flex;
   margin-right: 0;
+}
+@media screen and (max-width: 767px) {
+  .nav {
+    display: none;
+  }
 }
 
 .nav__list {
