--- a/scss/base/_reset.scss
+++ b/scss/base/_reset.scss
@@ -8,7 +8,8 @@
 .adds__list,
 .connect__list,
 .filters,
-.portfolio__list {
+.portfolio__list,
+.mob-nav, .mob-contacts, .mob-socials {
     list-style-type: none;
 }
 
@@ -32,18 +33,20 @@ p {
 .filters,
 .connect__list,
 .portfolio__list,
-.icons-list {
-    padding: 0;
-    margin: 0;
-}
+.icons-list  {
+  padding: 0;
+  margin: 0;
+ }
 
-img {
+ img {
     display: block;
     margin: 0;
 }
 
 .hero__btn,
 .filters__btn,
-.send-btn {
+.send-btn, 
+.menu-btn, 
+.mob-menu__btn {
     cursor: pointer;
 }
