--- a/scss/main.scss
+++ b/scss/main.scss
@@ -11,6 +11,7 @@
 @import'./components/contacts';
 @import'./components/modal-form';
 @import'./components/filters-btn';
+@import'./components/mobile-menu';
 
 // layout
 @import'./layout/header';
