--- a/scss/base/_reset.scss
+++ b/scss/base/_reset.scss
@@ -40,7 +40,11 @@ p {
 
  img {
     display: block;
-    margin: 0;
+    max-width: 100%;
+    height: auto;
+
+    object-fit: cover;
+    object-position: center;
 }
 
 .hero__btn,
