--- a/scss/components/_mobile-menu.scss
+++ b/scss/components/_mobile-menu.scss
@@ -1,20 +1,22 @@
 .menu-btn {
- display: inline-flex;
- align-items: center;
- justify-content: center;
+     display: inline-flex;
+     align-items: center;
+     justify-content: flex-end;
 
- width: 40px;
- height: 40px;
+     margin-left: auto;
+     margin-top: 10px;
+     margin-right: 10px;
 
- background-color: transparent;
- border: none;
+     width: 40px;
+     height: 40px;
 
- cursor: pointer;
+     background-color: transparent;
+     border: none;
+     cursor: pointer;
 
- @media screen and (min-width: 768px) {
-    display: none;
-    
- }
+     @media screen and (min-width: 768px) {
+      display: none;
+     }
 
  &:hover, &:focus{
     fill: var(--akcent-color);
@@ -36,7 +38,12 @@
 
     padding: 48px 83px 48px 40px; 
 
+    opacity: 0;
+    pointer-events: none;
+    visibility: hidden;
+
     transform: translateX(100%);
+
     transition: transform var(--animation);
 
     @media screen and (min-width: 768px) {
@@ -44,8 +51,20 @@
         }
 
     .mob-menu.is-open {
+        opacity: 1;
+        pointer-events: initial;
+        visibility: visible;
+
         transform: translateX(0);
     }
+}
+
+.mob-menu__btn{
+    width: 40px;
+    height: 40px;
+
+    background-color: transparent;
+    border: none;
 }
 
 .mob-nav{
