--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -8,7 +8,16 @@
 }
 
 .header__logo {
+    margin-top: 16px;
+    margin-left: 15px;
+    margin-bottom: 16px;
     margin-right: 93px;
+
+    @media screen and (min-width: 768px) {
+        margin-top: 26px;
+            margin-left: 15px;
+            margin-bottom: 26px;
+    }
 
     color: var(--logo-header-color);
 
