--- a/scss/components/_mobile-menu.scss
+++ b/scss/components/_mobile-menu.scss
@@ -1,11 +1,15 @@
 .menu-btn {
+   
      display: inline-flex;
-     align-items: center;
-     justify-content: flex-end;
+      align-items: center;
+      justify-content: center;
+     margin: 0;
+     padding: 0;
+    
 
-     margin-left: auto;
-     margin-top: 10px;
-     margin-right: 10px;
+    //  margin-left: auto;
+    //  margin-top: 10px;
+    //  margin-right: 10px;
 
      width: 40px;
      height: 40px;
@@ -50,7 +54,7 @@
             display: none;
         }
 
-    .mob-menu.is-open {
+    &.is-open {
         opacity: 1;
         pointer-events: initial;
         visibility: visible;
