--- a/css/main.css
+++ b/css/main.css
@@ -407,8 +407,8 @@ img {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  margin: 0;
   padding: 0;
+  margin-left: auto;
   width: 40px;
   height: 40px;
   background-color: transparent;
@@ -424,25 +424,14 @@ img {
   fill: var(--akcent-color);
 }
 
-.mob-menu {
+.menu-overlay {
   position: fixed;
   top: 0;
   left: 0;
   z-index: 100;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  width: 100%;
-  height: 796px;
   background-color: white;
-  padding: 48px 83px 48px 40px;
-  opacity: 0;
-  pointer-events: none;
-  visibility: hidden;
+  -webkit-box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.04), 0px 2px 4px rgba(0, 0, 0, 0.08), 0px 1px 3px rgba(0, 0, 0, 0.16);
+          box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.04), 0px 2px 4px rgba(0, 0, 0, 0.08), 0px 1px 3px rgba(0, 0, 0, 0.16);
   -webkit-transform: translateX(100%);
           transform: translateX(100%);
   -webkit-transition: -webkit-transform var(--animation);
@@ -450,22 +439,40 @@ img {
   transition: transform var(--animation);
   transition: transform var(--animation), -webkit-transform var(--animation);
 }
+.menu-overlay.is-open {
+  -webkit-transform: translateX(0);
+          transform: translateX(0);
+}
+
+.mob-menu {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  max-width: 480px;
+  height: 100%;
+  padding: 48px 40px;
+  opacity: 1;
+  pointer-events: initial;
+  visibility: visible;
+}
 @media screen and (min-width: 768px) {
   .mob-menu {
     display: none;
   }
 }
-.mob-menu.is-open {
-  opacity: 1;
-  pointer-events: initial;
-  visibility: visible;
-  -webkit-transform: translateX(0);
-          transform: translateX(0);
-}
 
 .mob-menu__btn {
-  width: 40px;
-  height: 40px;
+  position: absolute;
+  top: 10px;
+  right: 15px;
+  cursor: pointer;
   background-color: transparent;
   border: none;
 }
@@ -489,6 +496,9 @@ img {
   text-decoration: none;
 }
 .mob-nav__link:hover, .mob-nav__link:focus {
+  color: var(--akcent-color);
+}
+.mob-nav__link--active {
   color: var(--akcent-color);
 }
 
@@ -562,6 +572,9 @@ img {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 .header__logo {
