--- a/scss/components/_mobile-menu.scss
+++ b/scss/components/_mobile-menu.scss
@@ -3,11 +3,11 @@
      display: inline-flex;
       align-items: center;
       justify-content: center;
-     margin: 0;
+    //  margin: 0;
      padding: 0;
     
 
-    //  margin-left: auto;
+     margin-left: auto;
     //  margin-top: 10px;
     //  margin-right: 10px;
 
@@ -27,45 +27,55 @@
  }
 }
 
-.mob-menu{
-   position: fixed;
+.menu-overlay{
+    position: fixed;
     top: 0;
-    left: 0;
-    z-index: 100;
+        left: 0;
+        z-index: 100;
 
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    height: 796px;
+        background-color: white;
+        box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.04), 0px 2px 4px rgba(0, 0, 0, 0.08), 0px 1px 3px rgba(0, 0, 0, 0.16);
+        transform: translateX(100%);
+        transition: transform var(--animation);
 
-    background-color: white;
+     &.is-open{
+        transform: translateX(0);
+     }   
+}
 
-    padding: 48px 83px 48px 40px; 
 
-    opacity: 0;
-    pointer-events: none;
-    visibility: hidden;
+.mob-menu{
+     display: flex;
+     flex-direction: column;
+     justify-content: space-between;
 
-    transform: translateX(100%);
+     max-width: 480px;
+     height: 100%;
+     padding: 48px 40px; 
 
-    transition: transform var(--animation);
+     opacity: 1;
+     pointer-events: initial;
+     visibility: visible;
+
+    
 
     @media screen and (min-width: 768px) {
             display: none;
         }
 
-    &.is-open {
-        opacity: 1;
-        pointer-events: initial;
-        visibility: visible;
-
-        transform: translateX(0);
-    }
+//    .menu-overlay.is-open & {
+//       opacity: 0;
+//       pointer-events: none;
+//       visibility: hidden;
+//    }
 }
 
 .mob-menu__btn{
-    width: 40px;
-    height: 40px;
+    position: absolute;
+    top: 10px;
+    right: 15px;
+
+    cursor: pointer;
 
     background-color: transparent;
     border: none;
@@ -93,7 +103,12 @@
         &:hover, &:focus{
             color: var(--akcent-color);
         }
-    
+
+        &--active {
+            color: var(--akcent-color);
+        }
+
+      
 }
 
 .mob-contacts{
