Спозиционировало кнопку бургер-меню

--- a/css/main.css
+++ b/css/main.css
@@ -126,6 +126,11 @@ img {
   margin-left: auto;
   gap: 50px;
 }
+@media screen and (max-width: 767px) {
+  .contacts {
+    display: none;
+  }
+}
 
 .contacts__link {
   display: -webkit-box;
@@ -145,11 +150,6 @@ img {
   text-decoration: none;
   -webkit-transition: color var(--animation);
   transition: color var(--animation);
-}
-@media screen and (max-width: 768px) {
-  .contacts__link {
-    display: none;
-  }
 }
 .contacts__link--mail:hover, .contacts__link--tel:hover, .contacts__link--mail:focus, .contacts__link--tel:focus {
   color: var(--akcent-color);
@@ -407,8 +407,6 @@ img {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  padding: 0;
-  margin-left: auto;
   width: 40px;
   height: 40px;
   background-color: transparent;
@@ -429,6 +427,7 @@ img {
   top: 0;
   left: 0;
   z-index: 100;
+  max-width: 480px;
   background-color: white;
   -webkit-box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.04), 0px 2px 4px rgba(0, 0, 0, 0.08), 0px 1px 3px rgba(0, 0, 0, 0.16);
           box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.04), 0px 2px 4px rgba(0, 0, 0, 0.08), 0px 1px 3px rgba(0, 0, 0, 0.16);
@@ -456,16 +455,21 @@ img {
       -ms-flex-pack: justify;
           justify-content: space-between;
   max-width: 480px;
-  height: 100%;
+  height: 796px;
   padding: 48px 40px;
-  opacity: 1;
-  pointer-events: initial;
-  visibility: visible;
+  opacity: 0;
+  pointer-events: none;
+  visibility: hidden;
 }
 @media screen and (min-width: 768px) {
   .mob-menu {
     display: none;
   }
+}
+.menu-overlay.is-open .mob-menu {
+  opacity: 1;
+  pointer-events: initial;
+  visibility: visible;
 }
 
 .mob-menu__btn {
@@ -476,8 +480,12 @@ img {
   background-color: transparent;
   border: none;
 }
+.mob-menu__btn:hover, .mob-menu__btn:focus {
+  fill: var(--akcent-color);
+}
 
 .mob-nav {
+  margin-top: 0;
   margin-bottom: auto;
   padding: 0;
 }
@@ -572,9 +580,9 @@ img {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 
 .header__logo {
