--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -5,7 +5,7 @@
 .header__conteiner {
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: space-between;
 }
 
 .header__logo {
