--- a/scss/components/_mobile-menu.scss
+++ b/scss/components/_mobile-menu.scss
@@ -3,13 +3,6 @@
      display: inline-flex;
       align-items: center;
       justify-content: center;
-    //  margin: 0;
-     padding: 0;
-    
-
-     margin-left: auto;
-    //  margin-top: 10px;
-    //  margin-right: 10px;
 
      width: 40px;
      height: 40px;
@@ -28,15 +21,17 @@
 }
 
 .menu-overlay{
-    position: fixed;
-    top: 0;
-        left: 0;
-        z-index: 100;
+     position: fixed;
+     top: 0;
+     left: 0;
+     z-index: 100;
+     max-width: 480px;
 
-        background-color: white;
-        box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.04), 0px 2px 4px rgba(0, 0, 0, 0.08), 0px 1px 3px rgba(0, 0, 0, 0.16);
-        transform: translateX(100%);
-        transition: transform var(--animation);
+     background-color: white;
+     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.04), 0px 2px 4px rgba(0, 0, 0, 0.08), 0px 1px 3px rgba(0, 0, 0, 0.16);
+     
+     transform: translateX(100%);
+     transition: transform var(--animation);
 
      &.is-open{
         transform: translateX(0);
@@ -50,24 +45,22 @@
      justify-content: space-between;
 
      max-width: 480px;
-     height: 100%;
+     height: 796px;
      padding: 48px 40px; 
-
-     opacity: 1;
-     pointer-events: initial;
-     visibility: visible;
-
-    
+     
+     opacity: 0;
+     pointer-events: none;
+     visibility: hidden;
 
     @media screen and (min-width: 768px) {
             display: none;
         }
 
-//    .menu-overlay.is-open & {
-//       opacity: 0;
-//       pointer-events: none;
-//       visibility: hidden;
-//    }
+   .menu-overlay.is-open & {
+      opacity: 1;
+      pointer-events: initial;
+      visibility: visible;
+   }
 }
 
 .mob-menu__btn{
@@ -79,9 +72,14 @@
 
     background-color: transparent;
     border: none;
+
+    &:hover, &:focus{
+        fill: var(--akcent-color);
+    }
 }
 
 .mob-nav{
+    margin-top: 0;
     margin-bottom: auto;
     padding: 0;
 }
