--- a/scss/layout/_features.scss
+++ b/scss/layout/_features.scss
@@ -10,21 +10,13 @@
 }
 
 .features__list {
-    display: block;
-
-    @media screen and (min-width: 768px) and (max-width:1199px) {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 30px;
-     }
-    
-
-    @media screen and (min-width: 1200px) {
-     display: flex;
-     flex-direction: row;
-     gap: 30px;
-    }
-    
+        display: flex; 
+        justify-content: space-between;
+        flex-wrap: wrap;
+        gap: 30px;
+        padding-left: 0;
+        margin-left: auto;
+        margin-right: auto;
 }
 
 .features__item {
@@ -46,16 +38,15 @@
 }
 
 .features__icons {
-
-    background-color: var(--filter-button);
-   
     margin-bottom: 30px;
     text-align: center;
     box-sizing: inherit;
     height: 120px;
 
+    background-color: var(--filter-button);
+
     @media screen and (min-width: 768px) {
-        display: flex;
+         display: flex;
          width: 354px;
          height: 120px;
          align-items: center;
@@ -74,8 +65,6 @@
              margin-top: 25px;
          }
 }
-
-
 
 .features__titie {
     font-weight: 700;
