--- a/scss/layout/_hero.scss
+++ b/scss/layout/_hero.scss
@@ -1,14 +1,17 @@
 .hero {
-    width: 480px;
+    max-width: 1600px;
     margin: 0 auto;
-    padding: 200px 0;
+    padding-top: 118px;
+    padding-bottom: 118px;
+    // padding: 200px 0;
 
     @media screen and (min-width: 768px) {
-        width: 768px;
+      width: 768px;
     }
 
     @media screen and (min-width: 1200px) {
-     width: 1600px; 
+      width: 1200px; 
+      padding-top: 200px;
     }
     
     background-position: center;
@@ -84,13 +87,11 @@
     letter-spacing: 0.06em;
     text-transform: uppercase;
 
-   
-
         @media screen and (min-width: 1200px) {
          width: 696px;
-        font-size: 44px;
-        line-height: 1.36;
-        }
+         font-size: 44px;
+         line-height: 1.36;
+         }
 }
 
 .hero__btn {
