--- a/scss/components/_contacts.scss
+++ b/scss/components/_contacts.scss
@@ -1,12 +1,23 @@
 .contacts {
-    display: flex;
-    margin-left: auto;
-    gap: 50px;
+        display: flex;
+        align-items: baseline;
+        flex-direction: column;
+        align-content: flex-end;
+       
 
     @media screen and (max-width: 767px) {
             display: none;
-    
         }
+    @media screen and (min-width: 768px) {
+        
+        
+    }    
+          
+     @media screen and (min-width: 1200px) {
+            //  display: flex;
+             margin-left: auto;
+             gap: 50px;
+        } 
 }
 
 .contacts__link {
@@ -14,17 +25,29 @@
     align-items: center;
     color: var(--icons-secondary-color);
 
-    padding-top: 32px;
-    padding-bottom: 32px;
+   
 
     color: var(--text-color);
     font-weight: 500;
-    font-size: 14px;
-    line-height: 1.14;
+    font-size: 12px;
+    line-height: 1.17;
     letter-spacing: 0.02em;
     text-decoration: none;
 
     transition: color var(--animation);
+
+    @media screen and (min-width: 768px) {
+       
+
+        }
+    
+
+    @media screen and (min-width: 1200px) {
+         font-size: 14px;
+         line-height: 1.14;
+         padding-top: 32px;
+         padding-bottom: 32px;
+    }
 
 
     &--mail:hover,
