--- a/scss/layout/_clients.scss
+++ b/scss/layout/_clients.scss
@@ -4,27 +4,46 @@
 }
 
 .clients__title {
-    font-weight: 700;
-    font-size: 36px;
-    line-height: 1.17;
-    text-align: center;
-    letter-spacing: 0.03em;
+     font-weight: 700;
+     font-size: 28px;
+     line-height: 1.18;
+     text-align: center;
+     letter-spacing: 0.03em;
 
-    margin-bottom: 50px;
+     margin-bottom: 30px;
+
+     @media screen and (min-width: 1200px) {
+      font-size: 36px;
+      line-height: 1.17;
+      margin-bottom: 50px;  
+     }
 }
 
 .clients__list {
     display: flex;
+    flex-wrap: wrap;
     align-items: center;
-    justify-content: center;
+    justify-content: space-between;
     gap: 30px;
+}
+
+.clients__item{
+        flex-basis: calc((100% - 30px) / 2);
+
+     @media screen and (min-width: 768px) {
+        flex-basis: calc((100% - 60px) / 3);  
+        }
+
+     @media screen and (min-width: 1200px) {
+         flex-basis: calc((100% - 150px) / 6);
+        }
 }
 
 .clients__link {
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 170px;
+    width: 100%;
     height: 92px;
     border: 1px solid var(--icons-basic-color);
     border-radius: 4px;
