--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -5,14 +5,29 @@
 }
 
 .footer__conteiner {
-    display: flex;
-    align-items: baseline;
+        display: flex; 
+        flex-direction: column; 
+        align-items: center;
+        gap: 60px;
+        justify-content: center;
+        text-align: center;
 
+        @media screen and (min-width: 1200px) {
+            //  display: flex;
+             align-items: baseline;
+             justify-content: flex-start;
+             text-align: left;
+        }
+    
     background-color: var(--bgc-secondary);
 }
 
 .footer__adds {
-    margin-right: 70px;
+
+    @media screen and (min-width: 1200px) {
+        margin-right: 70px;
+    }
+    
 }
 
 .footer__logo {
@@ -120,7 +135,16 @@
 
 .footer-form {
     display: block;
-    margin-left: 93px;
+    
+
+    @media screen and (max-width: 1199px) {
+        max-width: 450px;
+    }
+    
+    @media screen and (min-width: 1200px) {
+        margin-left: 93px;
+    }
+    
 }
 
 .footer-form__caption {
@@ -136,10 +160,12 @@
 }
 
 .footer-form__mail {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 12px;
+    display: block;
+    max-width: 480px;
+    // display: flex;
+    // align-items: center;
+    // justify-content: center;
+    // gap: 12px;
 }
 
 .footer-form__input {
@@ -147,6 +173,7 @@
     width: 358px;
     height: 50px;
     padding-left: 16px;
+    margin-bottom: 20px;
 
     border: 1px solid rgba(255, 255, 255, 0.3);
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
@@ -165,9 +192,9 @@
     display: flex;
     gap: 10px;
     align-items: center;
-    justify-content: center;
 
     padding: 10px 28px 10px 29px;
+    margin: 0 auto;
 
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     border-radius: 4px;
