--- a/scss/layout/_team.scss
+++ b/scss/layout/_team.scss
@@ -11,16 +11,23 @@
 }
 
 .team-title {
-    margin-bottom: 30px;
+     font-weight: 700;
+     font-size: 28px;
+     line-height: 1.18;
+      text-align: center;
+      letter-spacing: 0.03em;
+
+      margin-bottom: 30px;
 
     @media screen and (min-width: 1200px) {
+         font-size: 36px;
+         line-height: 1.17;
+
          margin-bottom: 50px;
      }
     }
     
 .team-list {
-
-
     display: flex;
     flex-wrap: wrap;
     gap: 30px;
@@ -41,8 +48,6 @@
     @media screen and (min-width: 1200px) {
          flex-basis: calc((100% - 90px) / 4);
     }
-    
-   
 }
 
 .card-name {
