--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -12,10 +12,24 @@
         justify-content: center;
         text-align: center;
 
+        @media screen and (min-width: 768px) {
+           
+            
+                display: flex;
+                
+                flex-wrap: wrap;
+                flex-direction: row;
+                align-items: baseline;
+                text-align: center;
+                
+                justify-content: space-around;
+        }
+
         @media screen and (min-width: 1200px) {
-            //  display: flex;
-             align-items: baseline;
-             justify-content: flex-start;
+            display: flex;
+            flex-wrap: nowrap;
+            align-items: baseline;
+             justify-content:center;
              text-align: left;
         }
     
@@ -135,15 +149,11 @@
 
 .footer-form {
     display: block;
-    
+    margin: 0 auto;
 
-    @media screen and (max-width: 1199px) {
+     @media screen and (max-width: 1199px) {
         max-width: 450px;
-    }
-    
-    @media screen and (min-width: 1200px) {
-        margin-left: 93px;
-    }
+     }
     
 }
 
@@ -160,17 +170,25 @@
 }
 
 .footer-form__mail {
-    display: block;
-    max-width: 480px;
-    // display: flex;
-    // align-items: center;
-    // justify-content: center;
-    // gap: 12px;
+     display: flex;
+     flex-wrap: wrap;
+     align-items: center;
+     
+
+    @media screen and (min-width: 768px) {
+     max-width: 480px;
+     display: flex;
+     flex-wrap: nowrap;
+     align-items: flex-start;
+     justify-content: center;
+     gap: 12px;
+    }
+    
 }
 
 .footer-form__input {
     box-sizing: border-box;
-    width: 358px;
+    width: 450px;
     height: 50px;
     padding-left: 16px;
     margin-bottom: 20px;
@@ -191,7 +209,8 @@
 .footer-form__btn {
     display: flex;
     gap: 10px;
-    align-items: center;
+    align-items: flex-start;
+    
 
     padding: 10px 28px 10px 29px;
     margin: 0 auto;
