--- a/scss/layout/_nav.scss
+++ b/scss/layout/_nav.scss
@@ -1,6 +1,6 @@
 .nav {
     display: flex;
-    margin-right: 0;
+    margin-right: auto;
 
     @media screen and (max-width: 767px) {
         display: none;
