--- a/scss/layout/_portfolio.scss
+++ b/scss/layout/_portfolio.scss
@@ -1,6 +1,11 @@
 .portfolio-section {
-    padding-top: 94px;
-    padding-bottom: 94px;
+  padding-top: 60px;
+  padding-bottom: 60px;
+
+    @media screen and (min-width: 1200px) {
+         padding-top: 94px;
+         padding-bottom: 94px;
+    }
 }
 
 .portfolio__list {
@@ -10,7 +15,18 @@
 }
 
 .portfolio__item {
-    flex-basis: calc((100% - 60px) / 3);
+    display: flex;
+    flex-wrap: wrap;
+    gap: 30px;
+
+    @media screen and (min-width: 768px) {
+        flex-basis: calc((100% - 30px)/2);
+    }
+
+    @media screen and (min-width: 1200px) {
+        flex-basis: calc((100% - 60px) / 3);
+    }
+    
 }
 
 .portfolio__link {
