--- a/scss/components/_filters-btn.scss
+++ b/scss/components/_filters-btn.scss
@@ -1,8 +1,13 @@
 .filters {
-    display: flex;
-    justify-content: center;
-    gap: 8px;
-    margin-bottom: 50px;
+     display: flex;
+     flex-wrap: wrap;
+     gap: 8px;
+     margin-bottom: 50px;
+
+    @media screen and (min-width: 768px) {
+     justify-content: center;
+    }
+    
 }
 
 .filters__btn {
