--- a/scss/components/_modal-form.scss
+++ b/scss/components/_modal-form.scss
@@ -22,14 +22,19 @@
     left: 50%;
     transform: translate(-50%, -50%);
 
-    width: 528px;
-    height: 581px;
+    width: 450px;
+    height: 609px;
     padding: 40px;
 
     background-color: var(--logo-footer-color);
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
         0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 4px;
+
+    @media screen and (min-width: 1200px) {
+         width: 528px;
+         height: 581px;
+    }
 }
 
 .close-btn {
@@ -73,6 +78,14 @@
 }
 
 .reg-group {
+    
+        // display: flex;
+        // gap: 10px;
+       
+        // flex-direction: column;
+        
+        // align-items: center;
+        // margin-bottom: 20px;
     display: block;
     margin-bottom: 20px;
 }
@@ -104,7 +117,7 @@
 }
 
 .reg-input {
-    width: 448px;
+    width: 370px;
     height: 40px;
     padding-left: 42px;
     border: 1px solid rgba(33, 33, 33, 0.2);
@@ -112,12 +125,16 @@
     cursor: pointer;
     outline: transparent;
 
+    @media screen and (min-width: 1200px) {
+        width: 448px;
+    }
+
     &:focus {
      border-color: var(--akcent-color);
     }
 }
 
-.reg-icons {
+.reg-icons {    
     position: absolute;
     top: 35px;
     left: 15px;
@@ -125,7 +142,7 @@
 }
 
 .reg-message {
-    width: 448px;
+    width: 370px;
     height: 120px;
     border: 1px solid rgba(33, 33, 33, 0.2);
     border-radius: 4px;
@@ -133,6 +150,10 @@
     padding: 12px 16px;
     cursor: pointer;
     outline: transparent;
+
+    @media screen and (min-width: 1200px) {
+            width: 448px;
+        }
 
     &:focus {
       border-color: var(--akcent-color);
@@ -162,13 +183,19 @@
 }
 
 .agree-txt {
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 1.71;
-    letter-spacing: 0.03em;
-    user-select: none;
+     font-weight: 400;
+     font-size: 12px;
+     line-height: 1.17;
+     letter-spacing: 0.03em;
+     user-select: none;
 
     color: var(--text-color);
+
+    @media screen and (min-width: 1200px) {
+    font-size: 14px;
+    line-height: 1.71;
+        
+    }
 }
 
 .agree-link {
